--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ ACCESS_TOKEN_EXPIRES_IN = 3600s
 RERESH_TOKEN_EXPIRES_IN = 60s
 JWT_COOKIE_EXPIRES = 3600s
 PORT = 4000 
+EMAIL = samuelchristiana38@gmail.com
+PASSWORD = lfdeltnqsdtoqbrc
